# artifact

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  README.md  TASK.md  pyproject.toml  release.config.mjs  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  deploy.yml
havij/: __init__.py
havij/application/: ports.py
havij/application/services/: meal_service.py  product_service.py  user_service.py
havij/domain/: rules.py
havij/domain/model/: meal.py  nutrients.py  product.py  user.py
havij/infrastructure/: config.py
havij/infrastructure/api/: catalog_adapter.py  openfoodfacts_client.py
havij/infrastructure/persistence/: meal_repository.py  sqlite_db.py  user_repository.py
havij/presentation/: streamlit_app.py
tests/application/: test_meal_service.py  test_product_service.py  test_user_service.py
tests/domain/: test_meal.py  test_nutrients.py
tests/infrastructure/: test_openfoodfacts_client.py  test_sqlite_repo.py
