[tool.poetry]
name = "havij_nutrition"
packages = [
    { include = "havij" },
]
version = "1.1.0"
description = "Hit your daily nutrition goals with Havij!"
authors = ["Farideh Tavakoli <farideh.tavakoli@studio.unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
# update the Python versions in .github/workflows/check.yml if you change this
python = ">= 3.10.0 < 4.0.0"
pandas = "^2.2.3"
requests = "^2.32.5"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.7"
mypy = "^1.18.2"
poetry = "^1.8.5"
poethepoet = "^0.37.0"
types-requests = "^2.32.4.20250913"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy havij tests"
compile = "python -m compileall havij tests"

[tool.poetry.scripts]
havij = "havij:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.mypy]
ignore_missing_imports = true
